Train using human data

--- a/python/Imitation Learning.ipynb
+++ b/python/Imitation Learning.ipynb
@@ -18,7 +18,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -47,7 +49,7 @@
    },
    "outputs": [],
    "source": [
-    "env_name = \"PushBC\" # Name of the Unity environment binary to launch\n",
+    "env_name = \"WallBC\" # Name of the Unity environment binary to launch\n",
     "train_mode = True # Whether to run the environment in training or inference mode"
    ]
   },
@@ -75,10 +77,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "brain_dict = env.reset()\n",
+    "brain_dict = env.reset(train_mode=False)\n",
     "E = brain_dict['BrainE']\n",
     "I = brain_dict['BrainI']\n",
     "\n",
@@ -95,7 +99,7 @@
    },
    "outputs": [],
    "source": [
-    "data_path = 'push_imitation'"
+    "data_path = 'wall_human'"
    ]
   },
   {
@@ -113,7 +117,7 @@
    },
    "outputs": [],
    "source": [
-    "num_steps = 5000"
+    "num_steps = 2000"
    ]
   },
   {
@@ -122,16 +126,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "states = np.zeros([0, s_size)\n",
+    "states = np.zeros([0, s_size])\n",
     "actions = np.zeros([0, 1])\n",
     "\n",
-    "states = np.append(states,I.states, axis=0)"
+    "states = np.append(states, I.states, axis=0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for step in range(num_steps):\n",
@@ -166,7 +172,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "save_data = pickle.load(open(data_path+\"/data.p\", \"rb\"))\n",
@@ -216,7 +224,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tf.reset_default_graph()\n",
@@ -225,7 +235,7 @@
     "\n",
     "num_epoch = 100\n",
     "batch_size = 128\n",
-    "test_episodes = 10"
+    "test_episodes = 50"
    ]
   },
   {
@@ -244,12 +254,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "losses = []\n",
     "percentages = []\n",
+    "all_rewards = []\n",
     "\n",
     "sess.run(init)\n",
     "for i in range(num_epoch):\n",
@@ -281,7 +292,8 @@
     "          .format(np.mean(batch_losses), np.mean(batch_percentages), np.mean(test_rewards), i))\n",
     "    losses.append(np.mean(batch_losses))\n",
     "    percentages.append(np.mean(batch_percentages))\n",
-    "plt.plot(losses)"
+    "    all_rewards.append(np.mean(test_rewards))\n",
+    "plt.plot(all_rewards)"
    ]
   },
   {
