apply curricula to training process

--- a/python/PPO.ipynb
+++ b/python/PPO.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -36,21 +36,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "### General parameters\n",
-    "max_steps = 5e5 # Set maximum number of steps to run environment.\n",
+    "max_steps = 3e5 # Set maximum number of steps to run environment.\n",
     "run_path = \"ppo\" # The sub-directory name for model and summary statistics\n",
     "load_model = False # Whether to load a saved model.\n",
     "train_model = True # Whether to train the model.\n",
     "summary_freq = 10000 # Frequency at which to save training statistics.\n",
     "save_freq = 50000 # Frequency at which to save model.\n",
-    "env_name = \"environment\" # Name of the training environment file.\n",
-    "curriculum_file = None\n",
+    "env_name = \"mytest\" # Name of the training environment file.\n",
+    "curriculum_file = \"curricula/race.json\"\n",
     "\n",
     "### Algorithm-specific parameters for tuning\n",
     "gamma = 0.99 # Reward discount rate.\n",
@@ -61,7 +61,7 @@
     "num_layers = 2 # Number of hidden layers between state/observation encoding and value/policy layers.\n",
     "epsilon = 0.2 # Acceptable threshold around ratio of old and new policy probabilities.\n",
     "buffer_size = 2048 # How large the experience buffer should be before gradient descent.\n",
-    "learning_rate = 3e-4 # Model learning rate.\n",
+    "learning_rate = 1e-4 # Model learning rate.\n",
     "hidden_units = 64 # Number of units in hidden layer.\n",
     "batch_size = 64 # How many experiences per gradient descent update step.\n",
     "normalize = False\n",
@@ -82,11 +82,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:unityagents:\n",
+      "'Academy' started successfully!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unity Academy name: Academy\n",
+      "        Number of brains: 1\n",
+      "        Reset Parameters :\n",
+      "\t\troad_width -> 4.0\n",
+      "Unity brain name: Brain\n",
+      "        Number of observations (per agent): 0\n",
+      "        State space type: continuous\n",
+      "        State space size (per agent): 7\n",
+      "        Action space type: continuous\n",
+      "        Action space size (per agent): 2\n",
+      "        Memory space size (per agent): 0\n",
+      "        Action descriptions: , \n"
+     ]
+    }
+   ],
    "source": [
     "env = UnityEnvironment(file_name=env_name, curriculum=curriculum_file)\n",
     "print(str(env))\n",
@@ -102,12 +127,323 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step: 10000. Mean Reward: -196.20000000000113. Std of Reward: 314.2999999999865.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:unityagents:\n",
+      "Lesson changed. Now in Lesson 1 : \troad_width -> 7.5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step: 20000. Mean Reward: 1162.3999999999892. Std of Reward: 262.39999999990425.\n",
+      "Step: 30000. Mean Reward: 1455.8999999998305. Std of Reward: 72.90000000004648.\n",
+      "Step: 40000. Mean Reward: 1347.5999999997885. Std of Reward: 45.49999999998636.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:unityagents:\n",
+      "Lesson changed. Now in Lesson 2 : \troad_width -> 7.0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step: 50000. Mean Reward: 943.2999999998895. Std of Reward: 451.1999999998859.\n",
+      "WARNING:tensorflow:Error encountered when serializing __tensorboard_plugin_asset__tensorboard_text.\n",
+      "Type is unsupported, or the types of the items don't match field type in CollectionDef.\n",
+      "'TextSummaryPluginAsset' object has no attribute 'name'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Error encountered when serializing __tensorboard_plugin_asset__tensorboard_text.\n",
+      "Type is unsupported, or the types of the items don't match field type in CollectionDef.\n",
+      "'TextSummaryPluginAsset' object has no attribute 'name'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved Model\n",
+      "Step: 60000. Mean Reward: 1446.0499999999004. Std of Reward: 177.45000000009372.\n",
+      "Step: 70000. Mean Reward: 1370.149999999785. Std of Reward: 47.24999999999239.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:unityagents:\n",
+      "Lesson changed. Now in Lesson 3 : \troad_width -> 6.5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step: 80000. Mean Reward: 1342.5499999997876. Std of Reward: 8.94999999999709.\n",
+      "Step: 90000. Mean Reward: 1434.099999999985. Std of Reward: 186.80000000000882.\n",
+      "Step: 100000. Mean Reward: 1438.999999999777. Std of Reward: 119.59999999997444.\n",
+      "WARNING:tensorflow:Error encountered when serializing __tensorboard_plugin_asset__tensorboard_text.\n",
+      "Type is unsupported, or the types of the items don't match field type in CollectionDef.\n",
+      "'TextSummaryPluginAsset' object has no attribute 'name'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Error encountered when serializing __tensorboard_plugin_asset__tensorboard_text.\n",
+      "Type is unsupported, or the types of the items don't match field type in CollectionDef.\n",
+      "'TextSummaryPluginAsset' object has no attribute 'name'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved Model\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:unityagents:\n",
+      "Lesson changed. Now in Lesson 4 : \troad_width -> 6.0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step: 110000. Mean Reward: 1053.9499999999196. Std of Reward: 148.24999999990928.\n",
+      "Step: 120000. Mean Reward: 1824.0499999999283. Std of Reward: 32.649999999932675.\n",
+      "Step: 130000. Mean Reward: 1702.1999999998793. Std of Reward: 37.900000000022715.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:unityagents:\n",
+      "Lesson changed. Now in Lesson 5 : \troad_width -> 5.5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step: 140000. Mean Reward: 895.3499999999328. Std of Reward: 318.7499999999117.\n",
+      "Step: 150000. Mean Reward: 1242.2499999998458. Std of Reward: 71.44999999994741.\n",
+      "WARNING:tensorflow:Error encountered when serializing __tensorboard_plugin_asset__tensorboard_text.\n",
+      "Type is unsupported, or the types of the items don't match field type in CollectionDef.\n",
+      "'TextSummaryPluginAsset' object has no attribute 'name'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Error encountered when serializing __tensorboard_plugin_asset__tensorboard_text.\n",
+      "Type is unsupported, or the types of the items don't match field type in CollectionDef.\n",
+      "'TextSummaryPluginAsset' object has no attribute 'name'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved Model\n",
+      "Step: 160000. Mean Reward: 1238.3499999998314. Std of Reward: 16.949999999987995.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:unityagents:\n",
+      "Lesson changed. Now in Lesson 6 : \troad_width -> 5.0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step: 170000. Mean Reward: 1683.2499999998242. Std of Reward: 357.9500000000339.\n",
+      "Step: 180000. Mean Reward: 763.6499999999579. Std of Reward: 1001.149999999957.\n",
+      "Step: 190000. Mean Reward: 576.8000000000637. Std of Reward: 197.50000000000716.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:unityagents:\n",
+      "Lesson changed. Now in Lesson 7 : \troad_width -> 4.5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step: 200000. Mean Reward: 1525.7499999998495. Std of Reward: 334.0499999999746.\n",
+      "WARNING:tensorflow:Error encountered when serializing __tensorboard_plugin_asset__tensorboard_text.\n",
+      "Type is unsupported, or the types of the items don't match field type in CollectionDef.\n",
+      "'TextSummaryPluginAsset' object has no attribute 'name'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Error encountered when serializing __tensorboard_plugin_asset__tensorboard_text.\n",
+      "Type is unsupported, or the types of the items don't match field type in CollectionDef.\n",
+      "'TextSummaryPluginAsset' object has no attribute 'name'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved Model\n",
+      "Step: 210000. Mean Reward: 1292.5999999999583. Std of Reward: 559.2999999998863.\n",
+      "Step: 220000. Mean Reward: 1146.9499999999389. Std of Reward: 108.44999999986692.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:unityagents:\n",
+      "Lesson changed. Now in Lesson 8 : \troad_width -> 4.0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step: 230000. Mean Reward: 2323.849999999904. Std of Reward: 184.74999999999568.\n",
+      "Step: 240000. Mean Reward: 1197.5999999998749. Std of Reward: 25.79999999996903.\n",
+      "Step: 250000. Mean Reward: 846.900000000078. Std of Reward: 131.60000000000537.\n",
+      "WARNING:tensorflow:Error encountered when serializing __tensorboard_plugin_asset__tensorboard_text.\n",
+      "Type is unsupported, or the types of the items don't match field type in CollectionDef.\n",
+      "'TextSummaryPluginAsset' object has no attribute 'name'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Error encountered when serializing __tensorboard_plugin_asset__tensorboard_text.\n",
+      "Type is unsupported, or the types of the items don't match field type in CollectionDef.\n",
+      "'TextSummaryPluginAsset' object has no attribute 'name'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved Model\n",
+      "Step: 260000. Mean Reward: 1015.8000000000409. Std of Reward: 17.800000000026614.\n",
+      "Step: 270000. Mean Reward: 1326.5999999998635. Std of Reward: 249.9999999998812.\n",
+      "Step: 280000. Mean Reward: 1220.0999999998503. Std of Reward: 35.99999999996203.\n",
+      "Step: 290000. Mean Reward: 1608.3500000000004. Std of Reward: 635.5499999999142.\n",
+      "Step: 300000. Mean Reward: 967.3000000000309. Std of Reward: 126.59999999995256.\n",
+      "WARNING:tensorflow:Error encountered when serializing __tensorboard_plugin_asset__tensorboard_text.\n",
+      "Type is unsupported, or the types of the items don't match field type in CollectionDef.\n",
+      "'TextSummaryPluginAsset' object has no attribute 'name'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Error encountered when serializing __tensorboard_plugin_asset__tensorboard_text.\n",
+      "Type is unsupported, or the types of the items don't match field type in CollectionDef.\n",
+      "'TextSummaryPluginAsset' object has no attribute 'name'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved Model\n",
+      "WARNING:tensorflow:Error encountered when serializing __tensorboard_plugin_asset__tensorboard_text.\n",
+      "Type is unsupported, or the types of the items don't match field type in CollectionDef.\n",
+      "'TextSummaryPluginAsset' object has no attribute 'name'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Error encountered when serializing __tensorboard_plugin_asset__tensorboard_text.\n",
+      "Type is unsupported, or the types of the items don't match field type in CollectionDef.\n",
+      "'TextSummaryPluginAsset' object has no attribute 'name'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved Model\n",
+      "INFO:tensorflow:Restoring parameters from ./models/ppo\\model-300001.cptk\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from ./models/ppo\\model-300001.cptk\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Froze 7 variables.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Froze 7 variables.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted 7 variables to const ops.\n",
+      "50 ops in the final graph.\n"
+     ]
+    }
+   ],
    "source": [
     "tf.reset_default_graph()\n",
     "\n",
@@ -164,7 +500,8 @@
     "        trainer.write_text(summary_writer, 'Hyperparameters', hyperparameter_dict, steps)\n",
     "    while steps <= max_steps:\n",
     "        if env.global_done:\n",
-    "            info = env.reset(train_mode=train_model, progress=get_progress())[brain_name]\n",
+    "            prog = get_progress()\n",
+    "            info = env.reset(train_mode=train_model, progress=prog)[brain_name]\n",
     "        # Decide and take an action\n",
     "        new_info = trainer.take_action(info, env, brain_name, steps, normalize)\n",
     "        info = new_info\n",
@@ -201,11 +538,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from ./models/ppo\\model-300001.cptk\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from ./models/ppo\\model-300001.cptk\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Froze 7 variables.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Froze 7 variables.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted 7 variables to const ops.\n",
+      "50 ops in the final graph.\n"
+     ]
+    }
+   ],
    "source": [
     "export_graph(model_path, env_name)"
    ]
@@ -228,7 +600,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
